# KAN

./: .gitignore  AGENTS.md  KAN_Alpha_PR.md  README.md  Review-from-claude.md  pyproject.toml  research_request.md
.evosci/: project.json
artifacts/: iteration_log.md
audits/: asset_audit.md  s0_real_data_audit.json
docs/: project_layout.md
experiments/: pipeline_tracker.md
figures/: method_sketch.md
ledgers/: attempts.jsonl
logs/: README.md
memory/: ideation-memory.md
plans/: paper_plan.md  todos.md
prereg/: evidence_protocol_v0.md  s1_gate_a_v0.lock.json  s1_gate_a_v0.md  s1_gate_a_v1.lock.json  s1_gate_a_v1.md  s1_gate_a_v1_implementation.lock.json  s1b_identifiability_v1.lock.json  s1b_identifiability_v1.md  s2_plan_c_vertical_v1.lock.json  s2_plan_c_vertical_v1.md  s2_plan_c_vertical_v1_implementation.lock.json  s2a_kan_e3_vertical_v2.lock.json  s2a_kan_e3_vertical_v2.md  (+19 more)
runtime/s2a_v4_eval/: README.md  pyproject.toml
runtime/s2a_v4_eval/evidence/: compatibility_smoke_cross_gpu.json  compatibility_smoke_cuda0.json  compatibility_smoke_cuda1.json  dependency_check.txt  gpu_inventory.txt  imports_and_cuda.json  offline_rebuild.json  regression.json  tracking_preimport_receipt.json  wheelhouse_validation.json
runtime/s2a_v4_eval/manifests/: MANIFEST.md  closure_summary.json  installed_distributions.json  installed_distributions.tsv  runtime_files.json  runtime_files.tsv  wheelhouse_files.json  wheelhouse_files.tsv
runtime/s2a_v4_eval/tools/: build_manifests.py  compatibility_smoke.py  fetch_wheelhouse.py  import_audit.py  runtime_launcher.py
(+1448 files in other folders)
